MàJ + Paramètres + Chargement de l'application et des données de LoL

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -1,12 +1,11 @@
 <!doctype html>
-<html>
+<html lang="fr">
   <head>
+    <title>Gestionnaire de tournoi Ultimate Bravery</title>
     <meta charset="UTF-8" />
-    <title>Electron</title>
-    <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:"
+      content="default-src 'self' https://lol.ddragon.infinity54.fr; script-src 'self' https://lol.ddragon.infinity54.fr; style-src 'self' 'unsafe-inline' https://lol.ddragon.infinity54.fr; img-src 'self' data: https://lol.ddragon.infinity54.fr"
     />
   </head>
 
