--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self' https://lol.ddragon.noxelis.dev; script-src 'self' https://lol.ddragon.noxelis.dev; style-src 'self' 'unsafe-inline' https://lol.ddragon.noxelis.dev; img-src 'self' data: https://lol.ddragon.noxelis.dev;"
+      content="default-src 'self' https://ddragon.noxelis.dev; script-src 'self' https://ddragon.noxelis.dev; style-src 'self' 'unsafe-inline' https://ddragon.noxelis.dev; img-src 'self' data: https://ddragon.noxelis.dev;"
     />
   </head>
 
